# keqing1

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  extract_tenhou_links.py  pyproject.toml  run_game_and_export.ipynb  run_game_script.py  test_riichienv_import.py
configs/: keqing_cached_naga.yaml  keqing_default.yaml  keqingv2_default.yaml  keqingv31_default.yaml  keqingv3_default.yaml  keqingv3_preprocess.yaml  keqingv4_default.yaml  keqingv4_exp_b3_probe.yaml  keqingv4_preprocess.yaml  v2.yaml  v4.yaml  v5_cached_naga.yaml  v5_default.yaml  xmodel1_default.yaml  xmodel1_preprocess.yaml  xmodel1_preprocess_probe_ds3_1000.yaml  xmodel1_probe_ds3_1000.yaml
docs/: CLAUDE.md  DATA_CONVERSION_FLOW.md  agent_sync.md  aka_analysis.md  change_summary_2026-04-16.md  chi_analysis.md  docs_index.md  mahjong_ai_implementation.md  mortal_action_contract.md  project_overview_current.md  project_progress.md  riichi_dev_mortal_handoff.md  riichienvREADME.md  rust_phase2a_status.md  rust_refactor_handoff_2026-04-08.md  todo_2026_04_20.md  v5model.md  yaku_analysis.md
evals/: __init__.py
plans/: keqingrl_interactive_policy_2026_04_21.md  keqingrl_lite_mainline_2026_04_24.md  keqingrl_rust_python_boundary_2026_04_24.md  mortal_teacher_contract_2026_04_28.md  mortal_training_runbook_2026_04_28.md  rust_ownership_push_2026_04_19.md  xmodel1_call_refactor_2026_04_21.md
rust/keqing_core/: .gitignore  Cargo.toml  THIRD_PARTY_NOTICES.md  build.py  pyproject.toml
rust/keqing_core/src/: action_features.rs  action_identity.rs  boundary_contract.rs  continuation_scenarios.rs  continuation_scoring.rs  counts.rs  eval_gate.rs  event_apply.rs  export_common.rs  future_truth.rs  hora_truth.rs  keqingv4_export.rs  keqingv4_summary.rs  legal_actions.rs  lib.rs  native_scoring.rs  progress_batch.rs  progress_delta.rs  progress_summary.rs  py_module.rs  replay_export_core.rs  replay_samples.rs  rulebase.rs  score_rules.rs  scoring_pool.rs  shanten.rs  shanten_table.rs  snapshot.rs  standard.rs  state_core.rs  terminal_resolver.rs  types.rs  value_proxy.rs  xmodel1_export.rs  xmodel1_schema.rs
rust/keqing_core/tests/: shanten_test.rs  xmodel1_schema_test.rs
scripts/: analyze_keqingrl_learning_signal.py  batch_convert_ds.py  batch_convert_mjai_converter.py  batch_convert_tenhou6.py  batch_train.py  benchmark_progress_oracle_rust.py  build_static_tables.py  compare_keqingv4_train_logs.py  download_and_convert.py  download_wait_categories.py  eval_keqingrl_mortal_imitation_shards.py  evaluate_keqingv4_special_calibration.py  evaluate_keqingv4_special_calibration_from_replays.py  export_keqingrl_mjai_replay.py  export_keqingrl_mortal_review_cases.py  generate_mortal_riichienv_replays.py  launch_tenhou_bots.py  materialize_keqingrl_mortal_imitation_shards.py  materialize_mortal_replay_sidecars.py  mine_keqingv4_special_boundary_cases.py  mjlog2mjai_parse.py  pack_xmodel1_shards.py  prepare_mortal_training.py  preprocess_cached.py  preprocess_ds4.py  preprocess_keqingv4.py  preprocess_task.py  preprocess_v2.py  preprocess_v3.py  preprocess_xmodel1.py  probe_keqingrl_rule_score_scale.py  probe_keqingrl_sampling_diversity.py  reconvert_failed_ds1.py  reorganize_ds.py  repair_xmodel1_cache_schema.py  review_xmodel1.py  run_game_and_export.ipynb  run_game_script.py  run_keqingrl_discard_research_sweep.py  run_keqingrl_fixed_online_bridge.py  (+26 more)
src/: main.py  main_bot.py  riichi.py
tests/: __init__.py  conftest.py  test_action_spec_aka_ankan.py  test_aka_consistency.py  test_battle_canonicalization.py  test_battle_edge_cases.py  test_battle_live_draw_staging.py  test_battle_rules_checklist.py  test_bot_driver_event_sync.py  test_bot_model_version.py  test_bot_protocol.py  test_convert_pipeline.py  test_features_v3.py  test_final_rank.py  test_gateway_battle_kakan.py  test_gateway_lobby_join.py  test_generate_mortal_riichienv_replays.py  test_inference_contracts.py  test_inspect_event_decision.py  test_keqingrl_actions.py  test_keqingrl_distribution.py  test_keqingrl_env_contract.py  test_keqingrl_learning_signal_diagnostics.py  test_keqingrl_mortal_imitation.py  test_keqingrl_policy.py  test_keqingrl_policy_forward.py  test_keqingrl_ppo_toy.py  (+101 more)
(+1650 files in other folders)
