[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keqing1"
version = "0.1.0"
description = "Riichi Mahjong MVP with mjai stream training and bot inference."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.2",
  "ipykernel>=7.2.0",
  "numpy>=1.24",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0",
  "riichienv>=0.4.7",
  "torch>=2.11.0",
  "uvicorn>=0.42.0",
  "websockets==10.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mahjong>=1.4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.10",
]
