[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keqing1"
version = "0.1.0"
description = "Riichi Mahjong MVP with mjai stream training and bot inference."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.2",
  "ipykernel>=7.2.0",
  "numpy>=1.24",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0",
  "riichienv==0.4.8",
  "torch>=2.11.0",
  "uvicorn>=0.42.0",
  "websockets==10.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = [
    "test_mortal_eval_metrics.py",
    "test_generate_mortal_riichienv_replays.py",
    "test_prepare_mortal_training.py",
    "test_rulebase_bot.py",
    "test_replay_action_semantics_matrix.py",
    "test_replay_actionspec_alignment.py",
    "test_replay_decision_normalization.py",
    "test_replay_hora_reconstruction.py",
    "test_replay_ryukyoku_obs.py",
    "test_replay_server_ippatsu_fix.py",
    "test_replay_state_reconstruction.py",
    "test_replay_tsumogiri_reconstruction.py",
    "test_gateway_*.py",
    "test_tenhou_bridge.py",
    "test_tenhou6_review_input.py",
    "test_tenhou_public_state_sync.py",
    "test_final_rank.py",
    "test_legal_actions_*.py",
    "test_normal_progress.py",
    "test_progress_oracle_rust.py",
    "test_rust_hora_shape_parity.py",
    "test_rust_state_core_parity.py",
]
[dependency-groups]
dev = [
    "mahjong>=1.4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.10",
    "tensorboard>=2.20.0",
    "toml>=0.10.2",
    "tqdm>=4.67.3",
]
