[package]
name = "keqing_core"
version = "0.1.0"
edition = "2021"
description = "Keqing Mahjong AI core computation library"
license = "MIT"

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
